# Avskjerming.Calendar

./: .gitignore  backup.sh  docker-compose.avskjerming.yml  docker-compose.production.yml  docker-compose.td.yml  docker-compose.yml
Server/src/Calendar.Server.API/: appsettings.Development.json  appsettings.json
Server/src/Calendar.Server.API/Controllers/: EmployeeController.cs  EventController.cs  TeamController.cs
Server/src/Calendar.Server.API/Services/: SqlSchemaService.cs
Server/src/Calendar.Server.Application/Infrastructure/: SqlSettings.cs
_server/: .dockerignore
_server/application/src/: authentication.rs  lib.rs  logger.rs
_server/src/: auth.rs  response.rs
frontend/: .dockerignore  .eslintrc.json  .prettierignore  .prettierrc  angular.json  package-lock.json  package.json
frontend/.docker/: Dockerfile  nginx.conf
frontend/src/: index.html  styles.scss
frontend/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
frontend/src/app/components/toast/: toast.component.html  toast.component.scss  toast.component.ts
frontend/src/app/guards/: auth.guard.ts
frontend/src/app/models/: event.model.ts
frontend/src/app/pages/calendar-page/: calendar-page.component.html  calendar-page.component.ts
frontend/src/app/pages/change-password-page/: change-password-page.component.html  (+1 more)
frontend/src/app/services/: auth.service.ts  employee.service.ts  event.service.ts  team.service.ts  toast.service.ts
frontend/src/app/store/: app.effects.ts  app.reducers.ts  app.state.ts  index.ts
frontend/src/environments/: environment.avskjerming.ts  environment.prod.ts  environment.td.ts  environment.ts
server/: .dockerignore  .env  Cargo.toml
server/.docker/: Dockerfile
server/.docker/api/: Dockerfile
server/.docker/postgres-test/: Dockerfile
server/application/: Cargo.toml
server/application/src/: authentication.rs  database.rs  employee.rs  event.rs  schema.rs  team.rs
server/src/: Cargo.toml  main.rs
server/src/api/: Cargo.toml
server/src/api/config/: avskjerming.yml  local.yml  td.yml
server/src/api/src/: app.rs  error.rs  lib.rs  main.rs  response.rs  settings.rs
server/src/api/src/middlewares/: auth.rs
server/src/api/src/routes/: auth.rs  employee.rs  event.rs  mod.rs  team.rs
server/src/api/tests/: main.rs
server/src/api/tests/it/: auth.rs  employee.rs  event.rs  helper.rs  mod.rs  team.rs  test_client.rs
server/src/postgres/: Cargo.toml  sqlx-data.json
server/src/postgres/migrations/: 20230620061010_initial_migration.sql
server/src/postgres/src/: adapter.rs  error.rs  lib.rs  test_db.rs
server/src/postgres/src/models/: employee.rs  event.rs  mod.rs  team.rs
server/src/postgres/src/queries/: auth.rs  employee.rs  event.rs  mod.rs  team.rs
(+34 files in other folders)
