[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
application = { path = "./application"}
actix-web = { version = "4.0.0-rc.1", features = ["openssl"] }
actix-cors = "0.6"
actix-session = "0.5"
openssl = { version = "0.10", features = ["vendored"] }
serde = "1.0.136"
futures-util = "0.3"
