[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
application = { path = "./application"}
actix-web =  "4.1.0"
actix-cors = "0.6"
actix-session = "0.5"
serde = "1.0.144"
futures-util = "0.3"
