[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "postgres", "chrono" ] }
tokio = "1"
serde = "1.0.136"
sha256 = "1.0.3"
log = "0.4"
chrono = { version = "0.4", features = [ "serde" ]}
