[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
postgres = { path = "../postgres" }

actix-web = "4.3.1"
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["macros"] }
utoipa = { version = "3.3.0", features = ["actix_extras", "chrono", "repr"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"] }
serde_json = "1.0.97"
tracing = "0.1.37"
config = { version = "0.13.3", features = ["yaml"] }
strum = { version = "0.25.0", features = ["derive"] }
tracing-actix-web = "0.7.5"
tracing-subscriber = "0.3.17"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
futures-util = "0.3.28"

[dev-dependencies]
dockertest = "0.3.1"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json", "cookies"] }
